--- a/serverless.yml
+++ b/serverless.yml
@@ -6,6 +6,9 @@ plugins:
 custom:
   dotenv:
     path: .env
+  serverless-offline:
+    httpPort: 3001
+    host: 0.0.0.0
 
 package:
   individually: true
@@ -69,6 +72,7 @@ provider:
   name: aws
   runtime: nodejs20.x
   region: us-east-2
+  stage: ${opt:stage, 'dev'}
   deploymentBucket:
     name: petrealm-serverless-deployments
   environment:
