--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -98,6 +98,7 @@ jobs:
           cd frontend
           npm run test:e2e
         env:
+          NEXT_PUBLIC_API_URL: http://localhost:3001/local
           SERVERLESS_ACCESS_KEY: ${{ secrets.SERVERLESS_ACCESS_KEY }}
           NODE_ENV: test
           DB_HOST: ${{ secrets.DB_HOST }}
